--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -75,142 +75,142 @@ p {
   margin-top: 0;
 }
 
-a {
-  color: var(--tertiary);
-  text-decoration: none;
-  font-weight: bold;
-}
+// a {
+//   color: var(--tertiary);
+//   text-decoration: none;
+//   font-weight: bold;
+// }
 
-a:hover {
-  text-decoration: underline;
-}
+// a:hover {
+//   text-decoration: underline;
+// }
 
-header {
-  background: var(--primary);
-}
+// header {
+//   background: var(--primary);
+// }
 
-header a {
-  color: var(--light);
-}
+// header a {
+//   color: var(--light);
+// }
 
-button {
-  font-size: 1rem;
-  text-decoration: none;
-  padding: 0.25rem 1rem;
-  border-radius: 0.5rem;
-  border: none;
-  outline: none;
-  cursor: pointer;
-  margin: 0 1px;
-  background-color: var(--secondary);
-}
+// button {
+//   font-size: 1rem;
+//   text-decoration: none;
+//   padding: 0.25rem 1rem;
+//   border-radius: 0.5rem;
+//   border: none;
+//   outline: none;
+//   cursor: pointer;
+//   margin: 0 1px;
+//   background-color: var(--secondary);
+// }
 
-button:hover {
-  opacity: 0.8;
-}
+// button:hover {
+//   opacity: 0.8;
+// }
 
-button[disabled] {
-  cursor: default;
-  opacity: 0.8;
-}
+// button[disabled] {
+//   cursor: default;
+//   opacity: 0.8;
+// }
 
-img {
-  max-width: 100%;
-}
+// img {
+//   max-width: 100%;
+// }
 
-span[role='img'] {
-  cursor: default;
-}
+// span[role='img'] {
+//   cursor: default;
+// }
 
-form {
-  width: 40%;
-}
+// form {
+//   width: 40%;
+// }
 
-input {
-  font-size: 1rem;
-  padding: 0.25rem;
-  border: 1px solid var(--dark);
-  outline: none;
-  border-radius: 3px;
-  transition: box-shadow 0.2s;
-}
+// input {
+//   font-size: 1rem;
+//   padding: 0.25rem;
+//   border: 1px solid var(--dark);
+//   outline: none;
+//   border-radius: 3px;
+//   transition: box-shadow 0.2s;
+// }
 
-input:focus {
-  border: 1px solid var(--secondary);
-  box-shadow: 0 0 0.25rem rgba(0, 0, 0, 0.5);
-}
+// input:focus {
+//   border: 1px solid var(--secondary);
+//   box-shadow: 0 0 0.25rem rgba(0, 0, 0, 0.5);
+// }
 
-.container {
-  width: 85%;
-  max-width: 1200px;
-  margin-left: auto;
-  margin-right: auto;
-}
+// .container {
+//   width: 85%;
+//   max-width: 1200px;
+//   margin-left: auto;
+//   margin-right: auto;
+// }
 
-.flex-row {
-  display: flex;
-  flex-wrap: wrap;
-}
+// .flex-row {
+//   display: flex;
+//   flex-wrap: wrap;
+// }
 
-.space-between {
-  justify-content: space-between;
-}
+// .space-between {
+//   justify-content: space-between;
+// }
 
-.flex-end {
-  justify-content: flex-end;
-}
+// .flex-end {
+//   justify-content: flex-end;
+// }
 
-.mx-1 {
-  margin-right: var(--spacing-one);
-  margin-left: var(--spacing-one);
-}
+// .mx-1 {
+//   margin-right: var(--spacing-one);
+//   margin-left: var(--spacing-one);
+// }
 
-.mx-2 {
-  margin-right: var(--spacing-two);
-  margin-left: var(--spacing-two);
-}
+// .mx-2 {
+//   margin-right: var(--spacing-two);
+//   margin-left: var(--spacing-two);
+// }
 
-.my-1 {
-  margin-top: var(--spacing-one);
-  margin-bottom: var(--spacing-one);
-}
+// .my-1 {
+//   margin-top: var(--spacing-one);
+//   margin-bottom: var(--spacing-one);
+// }
 
-.my-2 {
-  margin-top: var(--spacing-two);
-  margin-bottom: var(--spacing-two);
-}
+// .my-2 {
+//   margin-top: var(--spacing-two);
+//   margin-bottom: var(--spacing-two);
+// }
 
-.px-1 {
-  padding-right: var(--spacing-one);
-  padding-left: var(--spacing-one);
-}
+// .px-1 {
+//   padding-right: var(--spacing-one);
+//   padding-left: var(--spacing-one);
+// }
 
-.px-2 {
-  padding-right: var(--spacing-two);
-  padding-left: var(--spacing-two);
-}
+// .px-2 {
+//   padding-right: var(--spacing-two);
+//   padding-left: var(--spacing-two);
+// }
 
-.py-1 {
-  padding-top: var(--spacing-one);
-  padding-bottom: var(--spacing-one);
-}
+// .py-1 {
+//   padding-top: var(--spacing-one);
+//   padding-bottom: var(--spacing-one);
+// }
 
-.py-2 {
-  padding-top: var(--spacing-two);
-  padding-bottom: var(--spacing-two);
-}
+// .py-2 {
+//   padding-top: var(--spacing-two);
+//   padding-bottom: var(--spacing-two);
+// }
 
-.card {
-  width: 25%;
-  text-align: center;
-}
+// .card {
+//   width: 25%;
+//   text-align: center;
+// }
 
-.error-text {
-  color: var(--error);
-}
+// .error-text {
+//   color: var(--error);
+// }
 
-@media screen and (max-width: 768px) {
-  .card {
-    width: 100%;
-  }
-}
+// @media screen and (max-width: 768px) {
+//   .card {
+//     width: 100%;
+//   }
+// }
