Add bg color to book of fortune

--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -4,16 +4,16 @@
 /* Add sass files */
 @import './styles/custom.scss';
 
-:root {
-  --primary: #232f3e;
-  --secondary: #f3a847;
-  --tertiary: #b12704;
-  --light: #fafafa;
-  --dark: #272f32;
-  --error: rgb(228, 46, 1);
-  --spacing-one: calc(1rem * 0.5);
-  --spacing-two: calc(1rem);
-}
+// :root {
+//   --primary: #232f3e;
+//   --secondary: #f3a847;
+//   --tertiary: #b12704;
+//   --light: #fafafa;
+//   --dark: #272f32;
+//   --error: rgb(228, 46, 1);
+//   --spacing-one: calc(1rem * 0.5);
+//   --spacing-two: calc(1rem);
+// }
 
 * {
   box-sizing: border-box;
