--- a/client/src/styles/custom.scss
+++ b/client/src/styles/custom.scss
@@ -1,3 +1,3 @@
-.bg-green {
-  background-color: green;
-}
+// .bg-tarot {
+//   background: url('../src/img/site/tarot.jpg') no-repeat center center fixed;
+// }
