--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -27,7 +27,7 @@ body {
 body {
   margin: 0;
   padding: 0;
-  font-family: 'Karla', sans-serif;
+  font-family: 'Oxygen', sans-serif;
   font-weight: 400;
   line-height: 1.5;
   font-size: 16px;
@@ -40,7 +40,7 @@ h3,
 h4,
 h5,
 h6 {
-  font-family: 'Rubik', sans-serif;
+  font-family: 'Oxygen', sans-serif;
   font-weight: 500;
   margin: 5px 0;
   line-height: 1.25;
