--- a/client/src/styles/custom.scss
+++ b/client/src/styles/custom.scss
@@ -1,3 +1,3 @@
-// .bg-tarot {
-//   background: url('../src/img/site/tarot.jpg') no-repeat center center fixed;
-// }
+.bg-tarot {
+  // background: url('/site/tarot-bg.jpg') no-repeat center center fixed;
+}
