Add animate css and add rolation to home page image

--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -1,6 +1,10 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+//Add Animate CSS
+@import 'animate.css';
+
 /* Add sass files */
 @import './styles/custom.scss';
 
