--- a/client/src/styles/custom.scss
+++ b/client/src/styles/custom.scss
@@ -13,6 +13,21 @@
   }
 }
 
+//Main page
 .bg-tarot {
   // background: url('/site/tarot-bg.jpg') no-repeat center center fixed;
+}
+
+// Rolate crystal ball
+.rolate-ball {
+  animation: rotation infinite 20s linear;
+}
+
+@keyframes rotation {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(359deg);
+  }
 }
