--- a/client/src/components/Cart/style.css
+++ b/client/src/components/Cart/style.css
@@ -4,12 +4,7 @@
   right: 0;
   min-width: 20%;
   max-width: 30%;
-  max-height: 60%;
-  /* background-color: var(--light); */
-  overflow: auto;
-  padding: 0.5rem;
-  box-shadow: 0 0 1rem rgba(0, 0, 0, 0.5);
-  border-bottom-left-radius: 0.5rem;
+  min-height: 100%;
 }
 
 .cart h2 {
