Update shopping cart pop out

--- a/client/src/styles/custom.scss
+++ b/client/src/styles/custom.scss
@@ -4,9 +4,8 @@
     display: flex;
     align-items: center;
     li {
-      padding: 12px;
+      // padding: 12px;
       &:hover {
-        font-weight: bolder;
         background-color: #4a044e;
       }
     }
