--- a/client/src/components/Cart/style.css
+++ b/client/src/components/Cart/style.css
@@ -23,28 +23,21 @@
   /* position: fixed;
   top: 2%;
   right: 1%; */
-  font-size: 2rem;
+  font-size: 1.4rem;
   cursor: pointer;
   background-color: var(--secondary);
-  border-radius: 50%;
-  padding: 0.25rem;
-  width: 50px;
-  height: 50px;
+  transform: scaleX(-1);
 }
 
 .cart-closed:hover {
   transform: rotate(8deg);
 }
 
-.cart img {
-  width: 70px;
-  margin-right: 1rem;
-}
-
 .cart input {
-  width: 50px;
+  width: 40px;
   padding: 0;
-  margin: 0 0.5rem 1rem 0;
+  /* margin: 0 0.5rem 1rem 0; */
+  padding-inline: 5px;
 }
 
 @media screen and (max-width: 768px) {
