--- a/client/src/styles/custom.scss
+++ b/client/src/styles/custom.scss
@@ -3,7 +3,7 @@
   ul {
     display: flex;
     align-items: center;
-    li {
+    li:not(.cart-li) {
       // padding: 12px;
       &:hover {
         background-color: #4a044e;
