--- a/client/src/styles/fortuneTelling.css
+++ b/client/src/styles/fortuneTelling.css
@@ -1,5 +1,3 @@
-
-
 body {
 
   background-color: black;
@@ -75,7 +73,9 @@ body {
   width: 100%;
   height: 100%;
   background-image: url('../../public/src/img/bg/oracle-palace.jpg');
+  background-repeat: 'no-repeat';
   background-position: center;
+  background-size: '100%';
   z-index: 99;
   box-sizing: border-box;
 }
@@ -119,7 +119,7 @@ body {
   z-index: 101;
 }
 
-#oracle-quetsion-div {
+#oracle-question-div {
 
   width: 100%;
   background-color: rgba(255, 255, 255, 0.75);
@@ -129,10 +129,35 @@ body {
   margin-bottom: 30px;
 }
 
+
+#tarot-div {
+
+  display: none;
+  position: absolute;
+  top: 35%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 95%;
+  min-width: 400px;
+  max-width: 800px;
+  min-height: 300px;
+  border-radius: 20px;
+  background-color: rgba(131, 201, 255, 0.75);
+  text-align: center;
+  color: black;
+  font-size: 30px;
+  font-family: 'Caveat', cursive;
+  padding: 20px;
+  z-index: 102;
+}
+
 .itemPicked {
 
   background-color: rgba(222, 58, 255, 0.3) !important;
 }
+
+
+
 
 .playerAnswerSelect:hover {
   border: 1px solid black;
@@ -177,7 +202,7 @@ body {
   display: block;
   position: absolute;
   right: 400px;
-  bottom: 100px;
+  bottom: 60px;
   z-index: 103;
 }
 
@@ -185,12 +210,10 @@ body {
 
   display: block;
   position: absolute;
-  bottom: 30px;
+  bottom: 50px;
   width: 350px;
-  height: 50px;
-  background-repeat: 'no-repeat';
-  background-size: '100% 100%';
-  background-image: url('../../public/src/img/icons/hp.png');
+  height: 30px;
+
 }
 
 #mpbar {
@@ -199,9 +222,7 @@ body {
   position: absolute;
   width: 350px;
   height: 30px;
-  background-repeat: 'no-repeat';
-  background-size: '100% 100%';
-  background-image: url('../../public/src/img/icons/mp.png');
+
 }
 
 .status-bar img {
@@ -244,10 +265,36 @@ body {
 
 
 
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 800px) {
   .cardNumDiv {
     width: 30px;
     height: 30px;
     font-size: 20px;
+  }
+
+
+  #user-menu {
+
+    display: block;
+    position: absolute;
+    right: 220px;
+    bottom: 70px;
+    z-index: 103;
+  }
+  
+
+  #hpbar {
+
+    bottom: 30px;
+    width: 200px;
+    height: 15px;
+
+  }
+  
+  #mpbar {
+  
+
+    width: 200px;
+    height: 30px;
   }
 }
