--- a/client/src/styles/fortuneTelling.css
+++ b/client/src/styles/fortuneTelling.css
@@ -1,13 +1,12 @@
 body {
-
   cursor: url('../../public/src/img/icons/sword.png'), pointer;
 }
 
 #main-game-div {
   background-color: black;
   position: fixed;
-  left:0px;
-  top: 0px; 
+  left: 0px;
+  top: 0px;
   width: 100%;
   height: 100%;
 }
@@ -35,7 +34,7 @@ body {
   cursor: pointer;
   width: 160px;
   height: 160px;
-  box-shadow: 0 0 25px 15px rgb(73, 191, 255, 0.7);
+  box-shadow: 0 0 25px 15px rgb(227 177 240 / 87%);
 }
 
 #start-btn .btn-label {
@@ -123,7 +122,7 @@ body {
   min-height: 300px;
   max-height: 600px;
   border-radius: 20px;
-  background-color: rgba(131, 201, 255, 0.75);
+  background-color: rgb(227 177 240 / 87%);
   text-align: center;
   color: black;
   font-size: 30px;
@@ -131,7 +130,6 @@ body {
   padding: 20px;
   overflow-y: auto;
   z-index: 101;
-  
 }
 
 #oracle-question-div {
@@ -141,7 +139,6 @@ body {
   border-radius: 10px;
   font-size: 30px;
   margin-bottom: 30px;
-  
 }
 
 #oracle-prophecy {
@@ -163,7 +160,7 @@ body {
   max-width: 800px;
   min-height: 300px;
   border-radius: 20px;
-  background-color: rgba(131, 201, 255, 0.75);
+  background-color: rgb(227 177 240 / 87%);
   text-align: center;
   color: black;
   font-size: 30px;
@@ -266,17 +263,12 @@ body {
   }
 }
 
-
-
 /*mobile player*/
 
 @media only screen and (max-width: 800px) {
-
   #oracle-prophecy {
-
     font-size: 20px;
   }
-
 
   .cardNumDiv {
     width: 30px;
