add install btn

--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -82,3 +82,11 @@ p {
 header {
   z-index: 1;
 }
+
+.installBtn {
+  display: block;
+  font-size: 18px;
+  background-color: rgb(0, 162, 255);
+  border-radius: 5px;
+  padding: 5px;
+}
