--- a/client/src/styles/fortuneTelling.css
+++ b/client/src/styles/fortuneTelling.css
@@ -111,7 +111,7 @@ body {
 #oracle-questions {
   display: none;
   position: absolute;
-  margin-top: 100px;
+  margin-top: 300px;
   top: 35%;
   left: 50%;
   transform: translate(-50%, -50%);
@@ -266,6 +266,10 @@ body {
 /*mobile player*/
 
 @media only screen and (max-width: 800px) {
+  #oracle-questions {
+    margin-top: 150px;
+  }
+  
   #oracle-prophecy {
     font-size: 20px;
   }
